hphp/hack/test/typecheck/is_expression/vec.php.exp
File "vec.php", line 6, characters 17-18:
Invalid argument (Typing[4110])
File "vec.php", line 25, characters 26-31:
Expected string
File "vec.php", line 4, characters 13-15:
But got T#1 from this is expression test
File "vec.php", line 4, characters 13-15:
The type vec expects 1 type parameter(s) (Typing[4101])
File "vec.php", line 13, characters 17-18:
Invalid argument (Typing[4110])
File "vec.php", line 25, characters 26-31:
Expected string
File "vec.php", line 11, characters 13-18:
But got T#1 from this is expression test
